Fixed an issue with column padding on small size screens

--- a/app/scss/_grid.scss
+++ b/app/scss/_grid.scss
@@ -36,13 +36,4 @@
 
 @if $enable-grid-classes{
     @include make-grid-columns();
-
-    .col-lg-12, .col-lg-11, .col-lg-10, .col-lg-9, .col-lg-9,
-    .col-lg-8, .col-lg-7, .col-lg-6, .col-lg-5, .col-lg-5,
-    .col-lg-4, .col-lg-3, .col-lg-2, .col-lg-1{
-        position: relative;
-        min-height: 1px;
-        padding-right: 0.9375rem;
-        padding-left: 0.9375rem;
-    }
 }
