--- a/app/scss/mixins/_grid.scss
+++ b/app/scss/mixins/_grid.scss
@@ -33,10 +33,7 @@
 }
 
 @mixin make-col($size, $columns: $grid-columns, $gutter: $grid-gutter-width){
-    position: relative;
-    min-height: 1px;
-    padding-right: ($gutter / 2);
-    padding-left:  ($gutter / 2);
+    @extend .col;
 
     @if $enable-flex {
         flex: 0 0 percentage($size / $columns);
